# globalazure-2026

./: .gitattributes  .gitignore  Content-Agent-Factory.sln  README.md  aspire.config.json  azure.yaml
.aspire/: settings.json
Lab/: .env.example  docker-compose.yml
Lab/dapr/components/: pubsub.yaml
Lab/docs/: architecture.md  content-creator-agent-architecture.md  evaluator-agent-architecture.md  how-to-run-locally.md  lab-manual.md  otel-architecture.md  podcaster-agent-architecture.md  research-agent-architecture.md  stop-building-apis-forge-agents-speaker-summary.md  stop-building-apis-forge-agents-talk-guide.md  stop-building-apis-two-voice-script.md
Lab/sample-output/: blog.md  evals.jsonl  podcast_transcript.md
Lab/src/agent-creator/: Dockerfile
Lab/src/agent-creator/AgentCreator/: A2AAuth.cs  A2ACard.cs  AgentCreator.csproj  ContentCreatorAgent.cs  ContentFactoryWorkflow.cs  Dockerfile  Program.cs
Lab/src/agent-creator/AgentCreator.Tests/: A2AModelsAndAuthTests.cs  AgentCreator.Tests.csproj  AgentCreatorTests.cs
Lab/src/agent-creator/AgentCreator/Executors/: BlogGenerationExecutor.cs  BriefInputExecutor.cs  OutputExecutor.cs  SocialGenerationExecutor.cs
Lab/src/agent-creator/AgentCreator/Models/: A2AModels.cs  ContentCreatedMessage.cs
Lab/src/agent-creator/AgentCreator/Properties/: launchSettings.json
Lab/src/agent-evaluator/: Dockerfile
Lab/src/agent-evaluator/AgentEvaluator/: A2AAuth.cs  A2ACard.cs  AgentEvaluator.csproj  ContentEvaluationService.cs  Dockerfile  EvaluatorAgent.cs  FoundryEvaluationService.cs  FoundryHostedEvaluatorService.cs  Program.cs
Lab/src/agent-evaluator/AgentEvaluator/Models/: A2AModels.cs  EvaluationModels.cs
Lab/src/agent-evaluator/AgentEvaluator/Properties/: launchSettings.json
Lab/src/agent-podcaster/: Dockerfile  a2a.py  a2a_models.py  agent-podcaster.pyproj  agent.py  audio_utils.py  main.py  pyproject.toml  run.py  script_generator.py  tts_client.py
Lab/src/agent-podcaster/tests/: conftest.py  test_agent_podcaster.py  test_packaging.py  test_pronunciations.py  test_script_generator.py
Lab/src/agent-podcaster/tests/fixtures/: sample_brief.json
Lab/src/agent-podcaster/tools/: fetch_content.py  pronunciations.py
Lab/src/agent-research/: Dockerfile  a2a.py  a2a_auth.py  a2a_models.py  agent-research.pyproj  agent.py  main.py  pyproject.toml  run.py
Lab/src/agent-research/tests/: test_a2a_auth.py  test_a2a_models.py  test_agent_research.py  test_extract_links.py
Lab/src/agent-research/tools/: extract_links.py  fetch_content.py  search_azure_sources.py  search_github.py  search_learn.py
Lab/src/aspire/ContentAgentFactory.AppHost/: ContentAgentFactory.AppHost.csproj  Program.cs  appsettings.Development.json
Lab/src/aspire/ContentAgentFactory.ServiceDefaults/: ContentAgentFactory.ServiceDefaults.csproj  Extensions.cs
Lab/src/dev-ui/: Dockerfile  dev-ui.esproj  entrypoint.sh  index.html
Lab/src/tts-server/: Dockerfile  main.py  model_loader.py  pyproject.toml  run.py  tts-server.pyproj
Lab/src/tts-server/tests/: test_tts_server.py
infra/: README.md  main.bicep  main.parameters.json  push-images.ps1
infra/pre-rendered/: bulk-lab-deploy.bicep  quick-lab-deploy.bicep
(+1 files in other folders)
